# filo

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE  README.md
.github/workflows/: ci.yml
cmake/: CPM.cmake  Version.hpp.in
src/: main.cpp
src/core/agent/: Agent.cpp  Agent.hpp  DelegatedAgentRunner.cpp  DelegatedAgentRunner.hpp  HistoryCompactor.cpp  HistoryCompactor.hpp  PermissionGate.hpp  RepositoryContextMessage.hpp  SafetyPolicy.hpp  SemanticHistoryEditor.cpp  SemanticHistoryEditor.hpp  SubagentEvents.hpp  SubagentOrchestrator.cpp  SubagentOrchestrator.hpp  ToolAccess.hpp  ToolCallDeduplicator.cpp  ToolCallDeduplicator.hpp  ToolCallPlanner.cpp  ToolCallPlanner.hpp  ToolCallScheduler.hpp  ToolOutputHistory.cpp  ToolOutputHistory.hpp  ToolResultStore.cpp  ToolResultStore.hpp
src/core/auth/: ApiKeyCredentialSource.hpp  AuthBrowserLauncher.cpp  AuthBrowserLauncher.hpp  AuthLogin.cpp  AuthLogin.hpp  AuthenticationManager.cpp  AuthenticationManager.hpp  ClaudeOAuthFlow.cpp  ClaudeOAuthFlow.hpp  FileTokenStore.cpp  FileTokenStore.hpp  GoogleCodeAssist.cpp  GoogleCodeAssist.hpp  GoogleOAuthCredentialSource.cpp  GoogleOAuthCredentialSource.hpp  GoogleOAuthFlow.cpp  GoogleOAuthFlow.hpp  ICredentialSource.hpp  IOAuthFlow.hpp  IOAuthTokenRevoker.hpp  ITokenStore.hpp  KimiOAuthFlow.cpp  KimiOAuthFlow.hpp  OAuthCredentialSource.cpp  OAuthCredentialSource.hpp  OAuthPkce.cpp  OAuthPkce.hpp  OAuthToken.hpp  OAuthTokenManager.cpp  OAuthTokenManager.hpp  OpenAIAuthFlow.cpp  OpenAIAuthFlow.hpp  OpenAIOAuthFlow.cpp  OpenAIOAuthFlow.hpp  QwenOAuthFlow.cpp  QwenOAuthFlow.hpp  XaiGrokClientIdentity.hpp  XaiOAuthCredentialSource.cpp  XaiOAuthCredentialSource.hpp  XaiOAuthFlow.cpp  (+1 more)
src/core/budget/: BudgetTracker.hpp  TokenAccounting.hpp  TokenLedger.cpp  TokenLedger.hpp  TokenUsageFormatters.hpp
src/core/cli/: TrustFlagResolver.cpp  TrustFlagResolver.hpp
src/core/code/: CodeBlock.cpp  CodeBlock.hpp  InteractiveCodeRunner.cpp  InteractiveCodeRunner.hpp
src/core/commands/: CommandExecutor.cpp  CommandExecutor.hpp  ReviewExecutor.cpp  ReviewExecutor.hpp  SkillCommand.hpp  SkillCommandLoader.cpp  SkillCommandLoader.hpp  SkillTurnResolver.hpp
src/core/config/: ConfigManager.cpp  ConfigManager.hpp  ModelDefaultsPersistence.cpp  ModelDefaultsPersistence.hpp  SessionModelOverride.cpp  SessionModelOverride.hpp
src/core/context/: ContextBuilder.cpp  ContextBuilder.hpp  ContextMentions.cpp  ContextMentions.hpp  ContextWindowTracker.cpp  ContextWindowTracker.hpp  MentionPathUtils.cpp  MentionPathUtils.hpp  PromptPlan.cpp  PromptPlan.hpp  SessionContext.cpp  SessionContext.hpp  SteeringLoader.cpp  SteeringLoader.hpp
src/core/history/: PromptHistoryStore.cpp  PromptHistoryStore.hpp
src/core/hooks/: HookManager.cpp  HookManager.hpp
src/core/landrun/: LandrunDescriptorSanitizer.cpp  LandrunDescriptorSanitizer.hpp  LandrunDriver.hpp  LandrunDriverFactory.cpp  LandrunDriverFactory.hpp  LandrunEnvironment.cpp  LandrunEnvironment.hpp  LandrunHelper.cpp  LandrunHelper.hpp  LandrunLaunch.cpp  LandrunLaunch.hpp  LandrunMode.hpp  LandrunPath.hpp  LandrunPolicy.hpp  LandrunPolicyCompiler.cpp  LandrunPolicyCompiler.hpp  LandrunReadiness.cpp  LandrunReadiness.hpp  LandrunRuntime.cpp  LandrunRuntime.hpp  LandrunSettings.hpp  LandrunStatus.cpp  LandrunStatus.hpp
src/core/llm/: HttpLLMProvider.cpp  HttpLLMProvider.hpp  LLMProvider.hpp  ModelCatalogDiscovery.cpp  ModelCatalogDiscovery.hpp  ModelCatalogProvider.cpp  ModelCatalogProvider.hpp  ModelCatalogSelector.hpp  ModelEffort.cpp  ModelEffort.hpp  ModelRegistry.cpp  ModelRegistry.hpp  Models.hpp  OpenAIEndpointUtils.hpp  ProviderCatalogGrouping.cpp  ProviderCatalogGrouping.hpp  ProviderClientIdentity.cpp  ProviderClientIdentity.hpp  ProviderDescriptor.hpp  ProviderFactory.cpp  ProviderFactory.hpp  ProviderManager.hpp  QwenModelTraits.cpp  QwenModelTraits.hpp  ReasoningCapabilities.hpp  ResponseFormat.hpp
src/core/logging/: Logger.cpp  Logger.hpp
src/core/mcp/: McpClientSession.cpp  McpClientSession.hpp  McpConnectionManager.cpp  McpDispatcher.cpp  (+13 more)
src/exec/: ApiGateway.cpp  ApiGateway.hpp  ApiGatewayModelList.hpp  Daemon.cpp  Daemon.hpp  Prompter.cpp  Prompter.hpp  RequestReplayCache.hpp  Server.cpp  Server.hpp
src/tui/: ActivityTimer.cpp  ActivityTimer.hpp  Autocomplete.cpp  Autocomplete.hpp  CodeBlockRunServices.cpp  CodeBlockRunServices.hpp  CodeBlockRunner.cpp  CodeBlockRunner.hpp  Constants.hpp  Conversation.cpp  Conversation.hpp  DiffPreview.cpp  DiffPreview.hpp  HistoryComponent.cpp  HistoryComponent.hpp  KeyInput.cpp  KeyInput.hpp  MainApp.cpp  MainApp.hpp  MarkdownRenderer.cpp  MarkdownRenderer.hpp  PickerState.hpp  PromptComponents.cpp  PromptComponents.hpp  PromptInput.cpp  PromptInput.hpp  RewindActions.cpp  RewindActions.hpp  RewindPicker.cpp  RewindPicker.hpp  SelectionClipboardCopier.cpp  SelectionClipboardCopier.hpp  SessionReplay.cpp  SessionReplay.hpp  StringUtils.hpp  Text.cpp  Text.hpp  TranscriptViewport.cpp  TranscriptViewport.hpp  TuiTheme.hpp  (+1 more)
tests/: TestSessionContext.hpp  test_activity_timer.cpp  test_agent_freeze.cpp  test_agent_ignore.cpp  test_agent_loop_control.cpp  test_agent_permissions.cpp  test_agent_stop.cpp  test_ascii_utils.cpp  test_auto_classifier.cpp  test_base64_utils.cpp  test_budget_tracker.cpp  test_claude_provider.cpp  test_code_blocks.cpp  test_commands.cpp  test_complexity_scorer.cpp  test_concurrent_queue.cpp  test_config_manager.cpp  test_context_builder.cpp  test_context_mentions.cpp  test_context_window.cpp  test_conversation.cpp  test_curl_websocket_transport.cpp  test_daemon_reliability.cpp  test_gemini_provider.cpp  test_grok_enhanced.cpp  test_grok_provider.cpp  test_history.cpp  test_history_component.cpp  test_hook_manager.cpp  test_http_response_lifecycle.cpp  test_integration_daemon_reliability.cpp  test_integration_mcp_client_session.cpp  test_integration_prompt_input.cpp  test_integration_provider_http.cpp  test_integration_shell_tool.cpp  test_integration_web_tools.cpp  test_interprocess_file.cpp  test_json_writer.cpp  test_key_input.cpp  test_kimi_provider.cpp  (+60 more)
(+206 files in other folders)
